@@ -1,0 +1,1 @@
+Tests/xmlfrag1.xml:8: XML in sourcecode not well formed:  Premature end of data in tag open line 2, line 3, column 5
