@@ -1,0 +1,1 @@
+Tests/xmlfrag2.xml:8: XML in sourcecode not well formed:  Entity 'nbsp' not defined, line 2, column 13
