@@ -1,7 +1,6 @@
 
-
 # Static values
-__version__  = '0.5.5'
+__version__  = '0.5.7'
 NAME         = 'rfclint'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
 
