@@ -160,15 +160,15 @@ setup(
     # 'rfclint': [ "../win32/bap.exe", "../win32/cygwin1.dll" ],
     # },
     # Match with what is in abnf.py
-    data_files=[('bin',
-                 ["win32/bap.exe", "win32/cygwin1.dll"] if os.name == "nt" else
-                 ["linux/bap"] if sys.platform.startswith("linux") else
-                 ["macos/bap"] if sys.platform == "darwin" else []
-                 )
-                ],
-    cmdclass= {
-        'install': PostInstallCommand
-    },
+    #data_files=[('bin',
+    #             ["win32/bap.exe", "win32/cygwin1.dll"] if os.name == "nt" else
+    #             ["linux/bap"] if sys.platform.startswith("linux") else
+    #             ["macos/bap"] if sys.platform == "darwin" else []
+    #             )
+    #            ],
+    #cmdclass= {
+    #    'install': PostInstallCommand
+    #},
 
     entry_points={
         'console_scripts': [
