@@ -457,7 +457,8 @@ class XmlRfcParser:
                      'https://xml2rfc.tools.ietf.org/public/rfc/',
                      'http://xml2rfc.ietf.org/public/rfc/',
                      'http://xml2rfc.tools.ietf.org/public/rfc/',
-                 ]
+                 ],
+                 resolve_entities=True
                  ):
         self.verbose = verbose
         self.quiet = quiet
@@ -466,6 +467,7 @@ class XmlRfcParser:
         self.no_network = no_network
         self.network_locs = network_locs
         self.no_xinclude = no_xinclude
+        self.resolve_entities = resolve_entities
 
         # Initialize templates directory
         self.templates_path = templates_path or \
@@ -570,7 +572,7 @@ class XmlRfcParser:
                                       remove_comments=remove_comments,
                                       remove_pis=remove_pis,
                                       remove_blank_text=True,
-                                      resolve_entities=True,
+                                      resolve_entities=self.resolve_entities,
                                       strip_cdata=strip_cdata)
 
         # Initialize the caching system
