@@ -8,6 +8,10 @@
   <title>$title</title>
 
     <script src="$resource_dir/mktree.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	    crossorigin="anonymous"></script>            
+    <script src="$resource_dir/jquery.inlineStyler.min.js"></script>
     <link rel="stylesheet" href="$resource_dir/mktree.css" type="text/css">
 
     <style>
@@ -47,6 +51,17 @@
     <script>
       convertTrees()
       expandTree("diffRoot")
+      $$(window).load(function() {
+      var cssRules = {
+        'propertyGroups' : {
+          'inline' : ['color']
+        },
+        'elementGroups' : {
+          'inline' : ['SPAN']
+        }
+      }
+      $$('#centerColumn').inlineStyler(cssRules);
+      });
     </script>
 
 
