@@ -1,7 +1,7 @@
 
 
 # Static values
-__version__  = '0.5.6'
+__version__  = '0.5.7'
 NAME         = 'xmldiff'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
 
