@@ -1,3 +1,10 @@
+rfctools-common (0.5.6) distribution(s); urgency=low
+
+	* Add option to not resolve entities for XML Linting
+	* Fix problem with installing on a clean platform
+
+-- Jim Schaad <ietf@augustcellars.com>  Mon 2 July 2018 12:00:00 -0700
+
 rfctools-common (0.5.5) distribution(s); urgency=low
 
 	* Correct problem with displaying utf8 strings
