@@ -1,3 +1,9 @@
+xmldiff (0.5.7) distribution(s); urgency=low
+
+	* Add options dealing w/ no network and no entity resolution
+
+-- Jim Schaad <ietf@augustcellars.com>  Mon 2 July 2018 12:00:00 -0800
+
 xmldiff (0.5.6) distribution(s); urgency=low
 
 	* Make things look prettier
